# zfs-remote-keyloader

./: .gitignore  Cargo.toml  README.md  Rocket.toml  default.nix  flake.nix  go.mod  main.go  package.nix  shell.nix
.github/workflows/: build.yml
cmd/: root.go  server.go
nix/: pkgs.nix  sources.json
nixos/modules/: zfs-remote-keyloader.nix
nixos/tests/: basic-test.nix
src/: main.rs  zfs.rs
static/: index.html
zfs/: zfs.go
