[package]
name = "zfs-remote-keyloader"
version = "0.2.2"
authors = ["Sam Hug <s@m-h.ug>"]
edition = "2018"

[dependencies]
clap = "2"
futures-util = "0.3"
hyper = { version = "0.14", features = [ "http1", "runtime", "server"] }
tokio = { version = "0.3", features = ["macros", "rt-multi-thread", "stream", "sync"] }
url = "2.2"
