[package]
name = "zfs-remote-keyloader"
version = "0.2.5"
authors = ["Sam Hug <s@m-h.ug>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
hyper = { version = "0.14", features = [ "http1", "runtime", "server"] }
log = "0.4.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2.3"
